added a few last resources

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,9 @@ Depends:
     R (>= 2.10)
 LazyData: true
 Suggests: 
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 URL: https://sbreitbart.github.io/asclepiasRpkg/
+VignetteBuilder: knitr
